Convert to monorepo: include backend and frontend in same repository
